@@ -47,7 +47,7 @@ public class ProcessingQueueManager extends ExtendedObjectManager<ProcessingQueu
 
     if (dirtyProcessingQueues != null && dirtyProcessingQueues.size() > 0) {
       return dirtyProcessingQueues.stream()
-          .map(queue -> queue.getId()).toList();
+          .map(queue -> queue.getId()).collect(Collectors.toList());
     }
 
     return Collections.emptyList();
@@ -63,15 +63,6 @@ public class ProcessingQueueManager extends ExtendedObjectManager<ProcessingQueu
       }
       return null;
     }).filter(position -> position != null).collect(Collectors.toList());
-
-    /*
-     * for (long itemId : itemIds) {
-     * Position item = Context.getDataManager().getObject(Position.class, itemId);
-     * if (item != null) {
-     * result.add(item);
-     * }
-     * }
-     */
 
     return result;
   }
